--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 .App {
-    min-height: 100vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    background-color: #FFF;
-    /* color: white; */
+  min-height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-logo {
