Some home page stuff

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,8 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: #282c34;
-  color: white;
+  background-color: #FFF;
+  color: black;
 }
 
 .App-logo {
